# FSS-15m-measurement-model

./: .gitignore  CMakeLists.txt  main.c  readme.md
.github/workflows/: cmake-multi-platform.yml
include/: sensor_simulation.h
src/: sensor_simulation.c  sensor_simulation_internal.h
test/: CMakeLists.txt  main.c  readme.md
test/lib/: SensorLib.lib
